@@ -4,6 +4,7 @@
 
 MovieJukebox 1.0.16 beta
 ------------------------
+  - Enhancement  #171 View & download internet movie trailers
   - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
   - Enhancement  #418 Option to exclude files without external subtitles
   - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
